--- a/css/contactstyle.css
+++ b/css/contactstyle.css
@@ -3,6 +3,7 @@ html{
 }
 *{
     font-family: 'Oswald', sans-serif;
+    background-color: powderblue;
 }
 nav ul{
     list-style-type: none;
@@ -12,7 +13,6 @@ nav ul{
     align-self: center;
     justify-content: space-between;
     width:100%;
-
     padding: 0;
 
 }
@@ -22,8 +22,13 @@ header{
     flex-wrap: nowrap;
     background-color: blanchedalmond;
 }
+
 nav li{
     display: inline;
+    padding-right: 20px;
+}
+nav li a{
+    padding-left: 20px;
     padding-right: 20px;
 }
 nav{
@@ -66,4 +71,31 @@ footer{
 
 }
 
+.contactinfo h1{
+    text-align: center;
+    font-size: 30px;
+    font-family: sans-serif;
+}
+
+.title{
+    text-decoration: underline;
+    text-align: center;
+}
+input{
+    width: 100%;
+    min-height: 40px;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    background-color: whitesmoke;
+    margin-bottom: 10px;
+}
+#submitbutton{
+    font-family: 'Oswald';
+    border: solid 1px blanchedalmond;
+    border-radius: 5px;
+    background-color: blanchedalmond;
+    width: 50%;
+    margin-left: 25%;
+    margin-right: 25%;
+}
 
