--- a/css/travelstyle.css
+++ b/css/travelstyle.css
@@ -44,7 +44,7 @@ nav{
     border-radius: 8px 8px 8px 8px;
     border-width: 3px;
     border-color: aqua;
-    background-color: darkgrey;
+    background-color: #E3E3E3;
 }
 a{
     text-decoration: none;
@@ -61,4 +61,71 @@ footer{
     background-color: lightblue ;
     text-align: center;
     padding: 10px;
+}
+
+main h1{
+    font-size: 40px;
+    font-family: sans-serif;
+    text-align: center;
+}
+.title{
+    text-decoration: underline;
+    text-align: center;
+}
+
+*{
+    font-family: 'Oswald', sans-serif;
+    background-color: powderblue;
+}
+.spot{
+    width:80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    border-style: solid;
+    border-radius: 8px 8px 8px 8px;
+    border-width: 2px;
+    border-color: black;
+    padding: 10px 5px 10px 5px;
+}
+.titleofspots{
+    margin: 10px 0 10px 0;
+    text-align: center;
+}
+.descriptionofspots{
+    margin: 2px 0 10px 20px;
+}
+
+.fullscene{
+    width: 90%;
+    margin-left: 5%;
+}
+.pair{
+    display: inline;
+}
+.pair>img:nth-child(2){
+    display: inline-block;
+    width:44%;
+    margin-left: 5%;
+    margin-right: 0%;
+    height: 180px;
+}
+
+.pair>img:nth-child(3){
+    display: inline-block;
+    width:44%;
+    margin-left: 0%;
+    margin-right: 5%;
+    height: 180px;
+}
+
+.spots{
+    display:grid;
+    grid-template-columns: 10% 80% 10%;
+    grid-template-rows: auto auto auto;
+    row-gap: 15px;
+}
+
+
+.spot{
+    grid-column: 2/span 1;
 }
