--- a/css/contactstyle.css
+++ b/css/contactstyle.css
@@ -52,7 +52,7 @@ nav{
     border-radius: 8px 8px 8px 8px;
     border-width: 3px;
     border-color: aqua;
-    background-color: darkgrey;
+    background-color: #E3E3E3;
 }
 a{
     text-decoration: none;
@@ -73,7 +73,7 @@ footer{
 
 .contactinfo h1{
     text-align: center;
-    font-size: 30px;
+    font-size: 40px;
     font-family: sans-serif;
 }
 
