--- a/css/huntstyle.css
+++ b/css/huntstyle.css
@@ -44,7 +44,7 @@ nav{
     border-radius: 8px 8px 8px 8px;
     border-width: 3px;
     border-color: aqua;
-    background-color: darkgrey;
+    background-color: #E3E3E3;
 }
 a{
     text-decoration: none;
@@ -56,9 +56,50 @@ header li{
 }
 
 
+
+
+.title{
+    text-decoration: underline;
+    text-align: center;
+}
+
+body{
+    font-family: 'Oswald', sans-serif;
+    background-color: powderblue;
+    text-align:justify;
+    text-justify:auto;
+}
+
 footer{
     background-color: lightblue ;
     text-align: center;
     padding: 10px;
 }
-
+main h1{
+    font-size: 40px;
+    font-family: sans-serif;
+    text-align: center;
+}
+.groupintro{
+    display: grid;
+    grid-template-columns: 50% 10% 40%;
+    row-gap: 40px;
+    margin: 30px 10px 30px 10px;
+}
+#grouppic{
+    grid-column: 1/span 1;
+}
+.Explain{
+    grid-column: 3/ span 1;
+}
+.urlans{
+    grid-column: 3/span 1;
+    color: transparent;
+    word-break: break-all;
+}
+.huntcontent{
+    display: grid;
+    grid-template-columns: 70% 5% 25%;
+    row-gap: 40px;
+    margin: 30px 10px 30px 10px;
+}
