--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -3,10 +3,19 @@ html{
 }
 nav ul{
     list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-self: center;
+    justify-content: space-between;
+    width:100%;
+
+    padding: 0;
+
 }
 header{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: nowrap;
     background-color: blanchedalmond;
 }
@@ -15,7 +24,6 @@ nav li{
     padding-right: 20px;
 }
 nav{
-
     padding: 25px 0;
     text-align: right;
 }
@@ -29,14 +37,6 @@ nav{
 .skip>a:focus{
     top:0px;
 }
-
-#header_content{
-    text-align: center;
-}
-#self_introduction_selfie>img{
-    width: 100px;
-    height: 100px;
-}
 #current_html{
 
     border-style: inset;
@@ -44,7 +44,75 @@ nav{
     border-radius: 8px 8px 8px 8px;
     border-width: 3px;
     border-color: aqua;
+    background-color: #E3E3E3;
 }
 a{
     text-decoration: none;
+}
+header li{
+    margin: 5px 0 5px 0;
+    padding: 0;
+    font-size: 20px;
+}
+
+
+
+
+.title{
+    text-decoration: underline;
+    text-align: center;
+}
+
+body{
+    font-family: 'Oswald', sans-serif;
+    background-color: powderblue;
+    text-align:justify;
+    text-justify:auto;
+    margin: 0 0 0 0;
+}
+
+footer{
+    background-color: lightblue ;
+    text-align: center;
+    padding: 10px;
+}
+
+main h1{
+    font-size: 40px;
+    font-family: sans-serif;
+    text-align: center;
+}
+
+.content{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    align-self: center;
+
+
+}
+.bascontent{
+    display: flex;
+    flex-direction: row;
+}
+#self_introduction_selfie{
+    width: 40%;
+    height: 100%;
+    margin: 5% 5% 5% 5%;
+}
+#basic_information{
+    width: 50%;
+    height: 100%;
+    margin: 5% 5% 5% 5%;
+}
+
+
+.label{
+    background-color: #E3E3E3;
+    border-style: solid;
+    border-color: #E3E3E3;
+    border-width: 1px;
+    border-radius: 8px 8px 8px 8px;
+    display: inline-block;
 }
