--- a/css/huntstyle.css
+++ b/css/huntstyle.css
@@ -23,6 +23,12 @@ nav li{
     display: inline;
     padding-right: 20px;
 }
+
+nav li a{
+    padding-left: 20px;
+    padding-right: 20px;
+    font-family: 'Oswald', sans-serif;
+}
 nav{
     padding: 25px 0;
     text-align: right;
@@ -64,7 +70,7 @@ header li{
 }
 
 body{
-    font-family: 'Oswald', sans-serif;
+    font-family:  sans-serif;
     background-color: powderblue;
     text-align:justify;
     text-justify:auto;
