--- a/css/travelstyle.css
+++ b/css/travelstyle.css
@@ -23,6 +23,11 @@ nav li{
     display: inline;
     padding-right: 20px;
 }
+nav li a{
+    padding-left: 20px;
+    padding-right: 20px;
+    font-family: 'Oswald', sans-serif;
+}
 nav{
     padding: 25px 0;
     text-align: right;
@@ -74,7 +79,7 @@ main h1{
 }
 
 *{
-    font-family: 'Oswald', sans-serif;
+    font-family:  sans-serif;
     background-color: powderblue;
 }
 .spot{
