--- a/css/travelstyle.css
+++ b/css/travelstyle.css
@@ -125,9 +125,9 @@ main h1{
 
 .spots{
     display:grid;
-    grid-template-columns: 1% 98% 1%;
+    grid-template-columns: 5% 90% 5%;
     grid-template-rows: auto auto auto;
-    row-gap: 15px;
+    row-gap: 5%;
 }
 
 
