--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -71,7 +71,7 @@ header li{
 }
 
 body{
-    font-family: 'Oswald', sans-serif;
+    font-family: sans-serif;
     background-color: powderblue;
     text-align:justify;
     text-justify:auto;
