--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -1,6 +1,10 @@
 html{
     scroll-behavior: smooth;
 }
+body{
+    font-family: "Lora",sans-serif;
+    background-color: powderblue;
+}
 nav ul{
     list-style-type: none;
     display: flex;
@@ -9,7 +13,6 @@ nav ul{
     align-self: center;
     justify-content: space-between;
     width:100%;
-
     padding: 0;
 
 }
@@ -19,26 +22,26 @@ header{
     flex-wrap: nowrap;
     background-color: blanchedalmond;
 }
+
 nav li{
     display: inline;
-    padding-right: 20px;
-}
 
+}
 nav li a{
-    padding-left: 20px;
-    padding-right: 20px;
+
     font-family: 'Oswald', sans-serif;
 }
-
 nav{
-    padding: 25px 0;
+    padding: 3px 5% 3px 5%;
     text-align: right;
+
 }
 
 .skip>a{
     -webkit-transition: top 1s ease-out;
     transition: top 1s ease-out;
     position: absolute;
+    background-color: blanchedalmond;
     top:-20px;
 }
 .skip>a:focus{
@@ -63,31 +66,30 @@ header li{
 }
 
 
-
-
-.title{
-    text-decoration: underline;
-    text-align: center;
-}
-
-body{
-    font-family: sans-serif;
-    background-color: powderblue;
-    text-align:justify;
-    text-justify:auto;
-    margin: 0 0 0 0;
-}
-
 footer{
     background-color: lightblue ;
     text-align: center;
     padding: 10px;
+    font-family: "Raleway";
+}
+main{
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 main h1{
+    text-align: center;
     font-size: 40px;
     font-family: sans-serif;
+    margin-top: 15px;
+}
+
+.title{
+    text-decoration: underline;
     text-align: center;
+    margin-top: 9px;
+    font-size: 20px;
+    margin-bottom: 10px;
 }
 
 .content{
@@ -111,7 +113,7 @@ main h1{
 #basic_information{
     width: 50%;
     height: 100%;
-    margin: 5% 5% 5% 5%;
+    margin: auto 5% auto 5%;
 }
 
 
@@ -122,4 +124,12 @@ main h1{
     border-width: 1px;
     border-radius: 8px 8px 8px 8px;
     display: inline-block;
+    margin: 0 3% 0 3%;
+}
+#Language, #hobbies{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
 }
