--- a/css/travelstyle.css
+++ b/css/travelstyle.css
@@ -165,9 +165,241 @@ img:hover{
 
 
 
+.flip-card a{
+    background-color: powderblue;
+}
+
+
+.flip-card {
+    background-color: transparent;
+    height:auto;
+    width: 90%;
+
+    margin: 5% 5%;
+    perspective: 1000px;
+}
+
+
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
 
 
 
+.flip-card:hover .flip-card-inner,
+.flip-card:focus-within .flip-card-inner,
+.flip-card:active .flip-card-inner,
+.flip-card:focus .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+
+
+
+.flip-card-front,
+.flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+
+    backface-visibility: hidden;
+}
+
+
+
+
+.flip-card-front {
+    background-color: #14234b;
+    color: white;
+    color: black;
+}
+
+
+
+.flip-card-back {
+    background-color: #14234b;
+    color: white;
+    transform: rotateY(180deg);
+}
+
+
+
+
+
+
+
+
+/*
+html{
+    scroll-behavior: smooth;
+}
+body{
+    font-family: "Lora",sans-serif;
+    background-color: powderblue;
+}
+nav ul{
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-self: center;
+    justify-content: space-between;
+    width:100%;
+    padding: 0;
+
+}
+header{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    background-color: blanchedalmond;
+}
+
+nav li{
+    display: inline;
+
+}
+nav li a{
+
+    font-family: 'Oswald', sans-serif;
+}
+nav{
+    padding: 3px 5% 3px 5%;
+    text-align: right;
+
+}
+
+.skip>a{
+    -webkit-transition: top 1s ease-out;
+    transition: top 1s ease-out;
+    position: absolute;
+    background-color: blanchedalmond;
+    top:-20px;
+}
+.skip>a:focus{
+    top:0px;
+}
+#current_html{
+
+    border-style: inset;
+    padding: 1px 3px 1px 3px;
+    border-radius: 8px 8px 8px 8px;
+    border-width: 3px;
+    border-color: aqua;
+    background-color: #E3E3E3;
+}
+a{
+    text-decoration: none;
+}
+header li{
+    margin: 5px 0 5px 0;
+    padding: 0;
+    font-size: 20px;
+}
+
+
+footer{
+    background-color: lightblue ;
+    text-align: center;
+    padding: 10px;
+    font-family: "Raleway";
+}
+
+main h1{
+    font-size: 40px;
+    font-family: sans-serif;
+    text-align: center;
+    margin-top: 5%;
+}
+main{
+    margin-left: 5%;
+    margin-right: 5%;
+}
+.Explain{
+    margin-top:1%;
+}
+.title{
+    text-decoration: underline;
+    text-align: center;
+    margin-top: 3%;
+    font-size: 20px;
+}
+
+
+.spot{
+    width:80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    border-style: solid;
+    border-radius: 8px 8px 8px 8px;
+    border-width: 2px;
+    border-color: black;
+    padding: 10px 5px 10px 5px;
+}
+.titleofspots{
+    margin: 10px 0 10px 0;
+    text-align: center;
+}
+.descriptionofspots{
+    margin: 2px 0 10px 20px;
+}
+
+.fullscene{
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    visibility: hidden;
+
+
+}
+img{
+    transition-property:  border-radius, border;
+    transition-duration: 1s;
+    transition-timing-function: ease-in-out;
+}
+img:hover{
+
+    border-radius:25px;
+
+}
+.pair{
+    display: inline;
+}
+.pair>img:nth-child(2){
+    display: inline-block;
+    width:44%;
+    margin-left: 5%;
+    margin-right: 0%;
+    height: 150px;
+}
+
+.pair>img:nth-child(3){
+    display: inline-block;
+    width:44%;
+    margin-left: 0%;
+    margin-right: 5%;
+    height: 150px;
+}
+
+.spots{
+    display:grid;
+    grid-template-columns: 5% 90% 5%;
+    grid-template-rows: auto auto auto;
+    row-gap: 15px;
+    margin-top: 3%;
+
+}
+
+
+.spot{
+    grid-column: 2/span 1;
+}
 
 
 
@@ -182,11 +414,9 @@ img:hover{
     width: 90%;
 
     margin: 5% 5%;
-    perspective: 1000px; /* Remove this if you don't want the 3D effect */
+    perspective: 1000px;
 }
 
-
-/* This container is needed to position the front and back side */
 
 .flip-card-inner {
     position: relative;
@@ -198,7 +428,6 @@ img:hover{
 }
 
 
-/* Do an horizontal flip when you move the mouse over the flip box container */
 
 .flip-card:hover .flip-card-inner,
 .flip-card:focus-within .flip-card-inner,
@@ -208,7 +437,7 @@ img:hover{
 }
 
 
-/* Position the front and back side */
+
 
 .flip-card-front,
 .flip-card-back {
@@ -216,12 +445,12 @@ img:hover{
     width: 100%;
     height: 100%;
     -webkit-backface-visibility: hidden;
-    /* Safari */
+
     backface-visibility: hidden;
 }
 
 
-/* Style the front side (fallback if image is missing) */
+
 
 .flip-card-front {
     background-color: #14234b;
@@ -230,10 +459,12 @@ img:hover{
 }
 
 
-/* Style the back side */
 
 .flip-card-back {
     background-color: #14234b;
     color: white;
     transform: rotateY(180deg);
 }
+
+
+*/
