--- a/css/travelstyle.css
+++ b/css/travelstyle.css
@@ -8,7 +8,7 @@ body{
 nav ul{
     list-style-type: none;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     align-self: center;
     justify-content: space-between;
@@ -71,6 +71,7 @@ footer{
     text-align: center;
     padding: 10px;
     font-family: "Raleway";
+    margin-top: 10px;
 }
 
 main h1{
@@ -80,8 +81,8 @@ main h1{
     margin-top: 5%;
 }
 main{
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: 2%;
+    margin-right: 2%;
 }
 .Explain{
     margin-top:1%;
@@ -95,9 +96,9 @@ main{
 
 
 .spot{
-    width:80%;
-    margin-left: 10%;
-    margin-right: 10%;
+    width:90%;
+    margin-left: 5%;
+    margin-right: 5%;
     border-style: solid;
     border-radius: 8px 8px 8px 8px;
     border-width: 2px;
