--- a/css/travelstyle.css
+++ b/css/travelstyle.css
@@ -71,7 +71,13 @@ footer{
     text-align: center;
     padding: 10px;
     font-family: "Raleway";
-    margin-top: 10px;
+
+}
+a:visited{
+    color: #551A8B;
+}
+a{
+    color: #551A8B;
 }
 
 main h1{
