--- a/css/contactstyle.css
+++ b/css/contactstyle.css
@@ -129,6 +129,18 @@ html{
 }
 
 
+@media screen and (min-width: 850px)
+{
+    /*for tablet*/
+    nav ul{
+
+        flex-direction: row;
+
+
+    }
+}
+
+
 /*
 html{
     scroll-behavior: smooth;
